--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -828,6 +828,285 @@
     "# Print results using tabulate\n",
     "print(tabulate(table, headers, tablefmt=\"grid\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| Dataset Type   |   Points Count |   Run | Algorithm   |   Weight |   Edge Count |   Runtime (s) |   Weight Error |   Edge Count Ratio |   Runtime Ratio |\n",
+      "+================+================+=======+=============+==========+==============+===============+================+====================+=================+\n",
+      "| wine           |            178 |     1 | kmistree    |   343.54 |          389 |     0.108156  |         0.73   |            81.4499 |        0.640514 |\n",
+      "+----------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wine           |            178 |     1 | kmist       |   343.03 |          526 |     0.107645  |         0.22   |            60.2357 |        0.643555 |\n",
+      "+----------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wine           |            178 |     1 | prim        |   342.81 |        31684 |     0.0692754 |         0      |             0      |        0        |\n",
+      "+----------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wine           |            178 |     1 | fmst        |   353.24 |         1701 |     0.0674143 |        10.4299 |            18.6267 |        1.02761  |\n",
+      "+----------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "[\n",
+      "    {\n",
+      "        \"dataset_type\": \"wine\",\n",
+      "        \"points_count\": 178,\n",
+      "        \"run\": 1,\n",
+      "        \"kmistree\": {\n",
+      "            \"weight\": 343.54,\n",
+      "            \"edge_count\": 389,\n",
+      "            \"runtime\": 0.10815596580505371,\n",
+      "            \"weight_error\": 0.7300000000000182,\n",
+      "            \"edge_count_error\": 81.44987146529563,\n",
+      "            \"runtime_error\": 0.6405137124453585\n",
+      "        },\n",
+      "        \"kmist\": {\n",
+      "            \"weight\": 343.03,\n",
+      "            \"edge_count\": 526,\n",
+      "            \"runtime\": 0.10764479637145996,\n",
+      "            \"weight_error\": 0.21999999999997044,\n",
+      "            \"edge_count_error\": 60.23574144486692,\n",
+      "            \"runtime_error\": 0.6435552996157211\n",
+      "        },\n",
+      "        \"prim\": {\n",
+      "            \"weight\": 342.81,\n",
+      "            \"edge_count\": 31684,\n",
+      "            \"runtime\": 0.0692753791809082\n",
+      "        },\n",
+      "        \"fmst\": {\n",
+      "            \"weight\": 353.23989472706046,\n",
+      "            \"edge_count\": 1701,\n",
+      "            \"runtime\": 0.0674142837524414,\n",
+      "            \"weight_error\": 10.429894727060457,\n",
+      "            \"edge_count_error\": 18.62669018224574,\n",
+      "            \"runtime_error\": 1.0276068412341384\n",
+      "        }\n",
+      "    }\n",
+      "]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/voy/.local/lib/python3.10/site-packages/sklearn/cluster/_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "ename": "JSONDecodeError",
+     "evalue": "Expecting property name enclosed in double quotes: line 1 column 2 (char 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 158\u001b[0m\n\u001b[1;32m    154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[1;32m    157\u001b[0m \u001b[38;5;66;03m# Load results from JSON file\u001b[39;00m\n\u001b[0;32m--> 158\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mload_results_from_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# Prepare data for tabulate\u001b[39;00m\n\u001b[1;32m    161\u001b[0m table \u001b[38;5;241m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[4], line 153\u001b[0m, in \u001b[0;36mload_results_from_json\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    152\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 153\u001b[0m         results \u001b[38;5;241m=\u001b[39m [json\u001b[38;5;241m.\u001b[39mloads(line\u001b[38;5;241m.\u001b[39mstrip()) \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+      "Cell \u001b[0;32mIn[4], line 153\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    151\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    152\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 153\u001b[0m         results \u001b[38;5;241m=\u001b[39m [\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    154\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+      "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
+      "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[1;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
+      "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/decoder.py:353\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    344\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Decode a JSON document from ``s`` (a ``str`` beginning with\u001b[39;00m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;124;03ma JSON document) and return a 2-tuple of the Python\u001b[39;00m\n\u001b[1;32m    346\u001b[0m \u001b[38;5;124;03mrepresentation and the index in ``s`` where the document ended.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    350\u001b[0m \n\u001b[1;32m    351\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    352\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_once\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting property name enclosed in double quotes: line 1 column 2 (char 1)"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import time as tm\n",
+    "from tabulate import tabulate\n",
+    "from sklearn.datasets import load_wine\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "\n",
+    "# Function to append results to JSON file\n",
+    "def append_results_to_json(result, filename):\n",
+    "    with open(filename, \"a\") as f:\n",
+    "        json.dump(result, f, indent=4)\n",
+    "        f.write(\"\\n\")  # Add a newline to separate entries\n",
+    "\n",
+    "\n",
+    "# Function to generate and evaluate MST algorithms\n",
+    "def evaluate_mst_algorithms(dataset_type, points, filename, runs=1):\n",
+    "    all_results = []\n",
+    "    for run in range(runs):\n",
+    "        mst_builder = MST(points)\n",
+    "\n",
+    "        results = {\n",
+    "            \"dataset_type\": dataset_type,\n",
+    "            \"points_count\": len(points),\n",
+    "            \"run\": run + 1,\n",
+    "        }\n",
+    "\n",
+    "        # Measure runtime for K-MSTree\n",
+    "        start_time = tm.time()\n",
+    "        mst_weight, edge_count, final_graph = mst_builder.apply_mst(\n",
+    "            algorithm=\"kmistree\", to_plot=False\n",
+    "        )\n",
+    "        end_time = tm.time()\n",
+    "        kmistree_runtime = end_time - start_time\n",
+    "        results[\"kmistree\"] = {\n",
+    "            \"weight\": mst_weight,\n",
+    "            \"edge_count\": edge_count,\n",
+    "            \"runtime\": kmistree_runtime,\n",
+    "        }\n",
+    "\n",
+    "        # Measure runtime for K-MST\n",
+    "        start_time = tm.time()\n",
+    "        mst_weight, edge_count, final_graph = mst_builder.apply_mst(\n",
+    "            algorithm=\"kmist\", to_plot=False\n",
+    "        )\n",
+    "        end_time = tm.time()\n",
+    "        kmist_runtime = end_time - start_time\n",
+    "        results[\"kmist\"] = {\n",
+    "            \"weight\": mst_weight,\n",
+    "            \"edge_count\": edge_count,\n",
+    "            \"runtime\": kmist_runtime,\n",
+    "        }\n",
+    "\n",
+    "        # Measure runtime for Prim's MST\n",
+    "        start_time = tm.time()\n",
+    "        prim_weight, prim_edge_count, final_graph = mst_builder.apply_mst(\n",
+    "            algorithm=\"prim\", to_plot=False\n",
+    "        )\n",
+    "        end_time = tm.time()\n",
+    "        prim_runtime = end_time - start_time\n",
+    "        results[\"prim\"] = {\n",
+    "            \"weight\": prim_weight,\n",
+    "            \"edge_count\": prim_edge_count,\n",
+    "            \"runtime\": prim_runtime,\n",
+    "        }\n",
+    "\n",
+    "        # Measure runtime for FMST\n",
+    "        start_time = tm.time()\n",
+    "        mst_weight, edge_count, final_graph = mst_builder.apply_mst(\n",
+    "            algorithm=\"fmst\", to_plot=False\n",
+    "        )\n",
+    "        end_time = tm.time()\n",
+    "        fmst_runtime = end_time - start_time\n",
+    "        results[\"fmst\"] = {\n",
+    "            \"weight\": mst_weight,\n",
+    "            \"edge_count\": edge_count,\n",
+    "            \"runtime\": fmst_runtime,\n",
+    "        }\n",
+    "\n",
+    "        # Calculate errors compared to Prim's MST\n",
+    "        for key in [\"kmistree\", \"kmist\", \"fmst\"]:\n",
+    "            results[key][\"weight_error\"] = abs(\n",
+    "                results[key][\"weight\"] - results[\"prim\"][\"weight\"]\n",
+    "            )\n",
+    "            results[key][\"edge_count_error\"] = (\n",
+    "                results[\"prim\"][\"edge_count\"] / results[key][\"edge_count\"]\n",
+    "            )\n",
+    "            results[key][\"runtime_error\"] = (\n",
+    "                results[\"prim\"][\"runtime\"] / results[key][\"runtime\"]\n",
+    "            )\n",
+    "\n",
+    "        all_results.append(results)\n",
+    "        append_results_to_json(results, filename)\n",
+    "\n",
+    "    return all_results\n",
+    "\n",
+    "\n",
+    "# Load Wine Dataset\n",
+    "wine_data = load_wine()\n",
+    "X = wine_data.data\n",
+    "scaler = StandardScaler()\n",
+    "X_scaled = scaler.fit_transform(X)\n",
+    "points = [tuple(point) for point in X_scaled]  # Convert to list of tuples\n",
+    "\n",
+    "# Parameters\n",
+    "dataset_type = \"wine\"\n",
+    "filename = \"mst_results_wine.json\"\n",
+    "\n",
+    "# Run experiments for wine dataset\n",
+    "all_experiment_results = evaluate_mst_algorithms(dataset_type, points, filename)\n",
+    "\n",
+    "# Prepare data for tabulate\n",
+    "table = []\n",
+    "headers = [\n",
+    "    \"Dataset Type\",\n",
+    "    \"Points Count\",\n",
+    "    \"Run\",\n",
+    "    \"Algorithm\",\n",
+    "    \"Weight\",\n",
+    "    \"Edge Count\",\n",
+    "    \"Runtime (s)\",\n",
+    "    \"Weight Error\",\n",
+    "    \"Edge Count Ratio\",\n",
+    "    \"Runtime Ratio\",\n",
+    "]\n",
+    "\n",
+    "for result in all_experiment_results:\n",
+    "    for key, value in result.items():\n",
+    "        if key not in [\"dataset_type\", \"points_count\", \"run\"]:\n",
+    "            row = [\n",
+    "                result[\"dataset_type\"],\n",
+    "                result[\"points_count\"],\n",
+    "                result[\"run\"],\n",
+    "                key,\n",
+    "                value[\"weight\"],\n",
+    "                value[\"edge_count\"],\n",
+    "                value[\"runtime\"],\n",
+    "                value.get(\"weight_error\", 0),\n",
+    "                value.get(\"edge_count_error\", 0),\n",
+    "                value.get(\"runtime_error\", 0),\n",
+    "            ]\n",
+    "            table.append(row)\n",
+    "\n",
+    "# Print results using tabulate\n",
+    "print(tabulate(table, headers, tablefmt=\"grid\"))\n",
+    "\n",
+    "# Print results for verification\n",
+    "print(json.dumps(all_experiment_results, indent=4))\n",
+    "\n",
+    "\n",
+    "# Function to load results from JSON file\n",
+    "def load_results_from_json(filename):\n",
+    "    with open(filename, \"r\") as f:\n",
+    "        results = [json.loads(line.strip()) for line in f]\n",
+    "    return results\n",
+    "\n",
+    "\n",
+    "# Load results from JSON file\n",
+    "results = load_results_from_json(filename)\n",
+    "\n",
+    "# Prepare data for tabulate\n",
+    "table = []\n",
+    "headers = [\n",
+    "    \"Dataset Type\",\n",
+    "    \"Points Count\",\n",
+    "    \"Run\",\n",
+    "    \"Algorithm\",\n",
+    "    \"Weight\",\n",
+    "    \"Edge Count\",\n",
+    "    \"Runtime (s)\",\n",
+    "    \"Weight Error\",\n",
+    "    \"Edge Count Ratio\",\n",
+    "    \"Runtime Ratio\",\n",
+    "]\n",
+    "\n",
+    "for result in results:\n",
+    "    for key, value in result.items():\n",
+    "        if key not in [\"dataset_type\", \"points_count\", \"run\"]:\n",
+    "            row = [\n",
+    "                result[\"dataset_type\"],\n",
+    "                result[\"points_count\"],\n",
+    "                result[\"run\"],\n",
+    "                key,\n",
+    "                value[\"weight\"],\n",
+    "                value[\"edge_count\"],\n",
+    "                value[\"runtime\"],\n",
+    "                value.get(\"weight_error\", 0),\n",
+    "                value.get(\"edge_count_error\", 0),\n",
+    "                value.get(\"runtime_error\", 0),\n",
+    "            ]\n",
+    "            table.append(row)\n",
+    "\n",
+    "# Print results using tabulate\n",
+    "print(tabulate(table, headers, tablefmt=\"grid\"))"
+   ]
   }
  ],
  "metadata": {
@@ -846,7 +1125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.3"
+   "version": "3.10.10"
   }
  },
  "nbformat": 4,
