--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -916,7 +916,7 @@
     "import json\n",
     "import time as tm\n",
     "from tabulate import tabulate\n",
-    "from sklearn.datasets import load_wine\n",
+    "from sklearn.datasets import load_iris\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "\n",
@@ -1009,18 +1009,18 @@
     "    return all_results\n",
     "\n",
     "\n",
-    "# Load Wine Dataset\n",
-    "wine_data = load_wine()\n",
-    "X = wine_data.data\n",
+    "# Load Iris Dataset\n",
+    "iris_data = load_iris()\n",
+    "X = iris_data.data\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "points = [tuple(point) for point in X_scaled]  # Convert to list of tuples\n",
     "\n",
     "# Parameters\n",
-    "dataset_type = \"wine\"\n",
-    "filename = \"mst_results_wine.json\"\n",
+    "dataset_type = \"iris\"\n",
+    "filename = \"mst_results_iris.json\"\n",
     "\n",
-    "# Run experiments for wine dataset\n",
+    "# Run experiments for iris dataset\n",
     "all_experiment_results = evaluate_mst_algorithms(dataset_type, points, filename)\n",
     "\n",
     "# Prepare data for tabulate\n",
