--- a/comparison.ipynb
+++ b/comparison.ipynb
@@ -280,62 +280,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
-      "| Dataset Type        |   Points Count |   Run | Algorithm   |   Weight |   Edge Count |   Runtime (s) |   Weight Error |   Edge Count Ratio |   Runtime Ratio |\n",
-      "+=====================+================+=======+=============+==========+==============+===============+================+====================+=================+\n",
-      "| wholesale_customers |            440 |     1 | kmistree    |  255.43  |          954 |      0.168937 |        0.51    |           202.935  |         2.19807 |\n",
-      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
-      "| wholesale_customers |            440 |     1 | kmist       |  255.03  |         1304 |      0.185302 |        0.11    |           148.466  |         2.00395 |\n",
-      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
-      "| wholesale_customers |            440 |     1 | prim        |  254.92  |       193600 |      0.371336 |        0       |             0      |         0       |\n",
-      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
-      "| wholesale_customers |            440 |     1 | fmst        |  263.156 |        12873 |      0.118978 |        8.23568 |            15.0392 |         3.12104 |\n",
-      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
-      "[\n",
-      "    {\n",
-      "        \"dataset_type\": \"wholesale_customers\",\n",
-      "        \"points_count\": 440,\n",
-      "        \"run\": 1,\n",
-      "        \"kmistree\": {\n",
-      "            \"weight\": 255.43,\n",
-      "            \"edge_count\": 954,\n",
-      "            \"runtime\": 0.16893744468688965,\n",
-      "            \"weight_error\": 0.5100000000000193,\n",
-      "            \"edge_count_error\": 202.9350104821803,\n",
-      "            \"runtime_error\": 2.1980665420033163\n",
-      "        },\n",
-      "        \"kmist\": {\n",
-      "            \"weight\": 255.03,\n",
-      "            \"edge_count\": 1304,\n",
-      "            \"runtime\": 0.1853015422821045,\n",
-      "            \"weight_error\": 0.11000000000001364,\n",
-      "            \"edge_count_error\": 148.46625766871165,\n",
-      "            \"runtime_error\": 2.0039538812497506\n",
-      "        },\n",
-      "        \"prim\": {\n",
-      "            \"weight\": 254.92,\n",
-      "            \"edge_count\": 193600,\n",
-      "            \"runtime\": 0.3713357448577881\n",
-      "        },\n",
-      "        \"fmst\": {\n",
-      "            \"weight\": 263.15567765494984,\n",
-      "            \"edge_count\": 12873,\n",
-      "            \"runtime\": 0.11897826194763184,\n",
-      "            \"weight_error\": 8.235677654949853,\n",
-      "            \"edge_count_error\": 15.039229394857454,\n",
-      "            \"runtime_error\": 3.121038572753997\n",
-      "        }\n",
-      "    }\n",
-      "]\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
@@ -345,15 +292,68 @@
      ]
     },
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| Dataset Type        |   Points Count |   Run | Algorithm   |   Weight |   Edge Count |   Runtime (s) |   Weight Error |   Edge Count Ratio |   Runtime Ratio |\n",
+      "+=====================+================+=======+=============+==========+==============+===============+================+====================+=================+\n",
+      "| wholesale_customers |            440 |     1 | kmistree    |  255.43  |          954 |      0.166696 |         0.51   |           202.935  |         2.24383 |\n",
+      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wholesale_customers |            440 |     1 | kmist       |  255.03  |         1304 |      0.178426 |         0.11   |           148.466  |         2.09631 |\n",
+      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wholesale_customers |            440 |     1 | prim        |  254.92  |       193600 |      0.374037 |         0      |             0      |         0       |\n",
+      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "| wholesale_customers |            440 |     1 | fmst        |  261.617 |        14590 |      0.150261 |         6.6975 |            13.2694 |         2.48924 |\n",
+      "+---------------------+----------------+-------+-------------+----------+--------------+---------------+----------------+--------------------+-----------------+\n",
+      "[\n",
+      "    {\n",
+      "        \"dataset_type\": \"wholesale_customers\",\n",
+      "        \"points_count\": 440,\n",
+      "        \"run\": 1,\n",
+      "        \"kmistree\": {\n",
+      "            \"weight\": 255.43,\n",
+      "            \"edge_count\": 954,\n",
+      "            \"runtime\": 0.16669583320617676,\n",
+      "            \"weight_error\": 0.5100000000000193,\n",
+      "            \"edge_count_error\": 202.9350104821803,\n",
+      "            \"runtime_error\": 2.2438294957042104\n",
+      "        },\n",
+      "        \"kmist\": {\n",
+      "            \"weight\": 255.03,\n",
+      "            \"edge_count\": 1304,\n",
+      "            \"runtime\": 0.17842626571655273,\n",
+      "            \"weight_error\": 0.11000000000001364,\n",
+      "            \"edge_count_error\": 148.46625766871165,\n",
+      "            \"runtime_error\": 2.0963114699334824\n",
+      "        },\n",
+      "        \"prim\": {\n",
+      "            \"weight\": 254.92,\n",
+      "            \"edge_count\": 193600,\n",
+      "            \"runtime\": 0.3740370273590088\n",
+      "        },\n",
+      "        \"fmst\": {\n",
+      "            \"weight\": 261.61749722326607,\n",
+      "            \"edge_count\": 14590,\n",
+      "            \"runtime\": 0.15026140213012695,\n",
+      "            \"weight_error\": 6.697497223266083,\n",
+      "            \"edge_count_error\": 13.269362577107607,\n",
+      "            \"runtime_error\": 2.4892422275887673\n",
+      "        }\n",
+      "    }\n",
+      "]\n"
+     ]
+    },
+    {
      "ename": "JSONDecodeError",
      "evalue": "Expecting property name enclosed in double quotes: line 1 column 2 (char 1)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 161\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# Load results from JSON file\u001b[39;00m\n\u001b[0;32m--> 161\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mload_results_from_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;66;03m# Prepare data for tabulate\u001b[39;00m\n\u001b[1;32m    164\u001b[0m table \u001b[38;5;241m=\u001b[39m []\n",
-      "Cell \u001b[0;32mIn[6], line 156\u001b[0m, in \u001b[0;36mload_results_from_json\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 156\u001b[0m         results \u001b[38;5;241m=\u001b[39m [json\u001b[38;5;241m.\u001b[39mloads(line\u001b[38;5;241m.\u001b[39mstrip()) \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
-      "Cell \u001b[0;32mIn[6], line 156\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 156\u001b[0m         results \u001b[38;5;241m=\u001b[39m [\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+      "Cell \u001b[0;32mIn[2], line 161\u001b[0m\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n\u001b[1;32m    160\u001b[0m \u001b[38;5;66;03m# Load results from JSON file\u001b[39;00m\n\u001b[0;32m--> 161\u001b[0m results \u001b[38;5;241m=\u001b[39m \u001b[43mload_results_from_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfilename\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    163\u001b[0m \u001b[38;5;66;03m# Prepare data for tabulate\u001b[39;00m\n\u001b[1;32m    164\u001b[0m table \u001b[38;5;241m=\u001b[39m []\n",
+      "Cell \u001b[0;32mIn[2], line 156\u001b[0m, in \u001b[0;36mload_results_from_json\u001b[0;34m(filename)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 156\u001b[0m         results \u001b[38;5;241m=\u001b[39m [json\u001b[38;5;241m.\u001b[39mloads(line\u001b[38;5;241m.\u001b[39mstrip()) \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
+      "Cell \u001b[0;32mIn[2], line 156\u001b[0m, in \u001b[0;36m<listcomp>\u001b[0;34m(.0)\u001b[0m\n\u001b[1;32m    154\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mload_results_from_json\u001b[39m(filename):\n\u001b[1;32m    155\u001b[0m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(filename, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[0;32m--> 156\u001b[0m         results \u001b[38;5;241m=\u001b[39m [\u001b[43mjson\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mloads\u001b[49m\u001b[43m(\u001b[49m\u001b[43mline\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstrip\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;28;01mfor\u001b[39;00m line \u001b[38;5;129;01min\u001b[39;00m f]\n\u001b[1;32m    157\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m results\n",
       "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/__init__.py:346\u001b[0m, in \u001b[0;36mloads\u001b[0;34m(s, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    341\u001b[0m     s \u001b[38;5;241m=\u001b[39m s\u001b[38;5;241m.\u001b[39mdecode(detect_encoding(s), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msurrogatepass\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m    343\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    344\u001b[0m         parse_int \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m parse_float \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m\n\u001b[1;32m    345\u001b[0m         parse_constant \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m object_pairs_hook \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m kw):\n\u001b[0;32m--> 346\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_default_decoder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdecode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    347\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mcls\u001b[39m \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    348\u001b[0m     \u001b[38;5;28mcls\u001b[39m \u001b[38;5;241m=\u001b[39m JSONDecoder\n",
       "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/decoder.py:337\u001b[0m, in \u001b[0;36mJSONDecoder.decode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    332\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mdecode\u001b[39m(\u001b[38;5;28mself\u001b[39m, s, _w\u001b[38;5;241m=\u001b[39mWHITESPACE\u001b[38;5;241m.\u001b[39mmatch):\n\u001b[1;32m    333\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Return the Python representation of ``s`` (a ``str`` instance\u001b[39;00m\n\u001b[1;32m    334\u001b[0m \u001b[38;5;124;03m    containing a JSON document).\u001b[39;00m\n\u001b[1;32m    335\u001b[0m \n\u001b[1;32m    336\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> 337\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mraw_decode\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m_w\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mend\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    338\u001b[0m     end \u001b[38;5;241m=\u001b[39m _w(s, end)\u001b[38;5;241m.\u001b[39mend()\n\u001b[1;32m    339\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m end \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mlen\u001b[39m(s):\n",
       "File \u001b[0;32m~/.conda/envs/myenv/lib/python3.10/json/decoder.py:353\u001b[0m, in \u001b[0;36mJSONDecoder.raw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    344\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Decode a JSON document from ``s`` (a ``str`` beginning with\u001b[39;00m\n\u001b[1;32m    345\u001b[0m \u001b[38;5;124;03ma JSON document) and return a 2-tuple of the Python\u001b[39;00m\n\u001b[1;32m    346\u001b[0m \u001b[38;5;124;03mrepresentation and the index in ``s`` where the document ended.\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    350\u001b[0m \n\u001b[1;32m    351\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m    352\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m--> 353\u001b[0m     obj, end \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mscan_once\u001b[49m\u001b[43m(\u001b[49m\u001b[43ms\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43midx\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    354\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mStopIteration\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[1;32m    355\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m JSONDecodeError(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mExpecting value\u001b[39m\u001b[38;5;124m\"\u001b[39m, s, err\u001b[38;5;241m.\u001b[39mvalue) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n",
@@ -367,8 +367,6 @@
     "import pandas as pd\n",
     "from tabulate import tabulate\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.cluster import KMeans\n",
-    "from sklearn.metrics import silhouette_score\n",
     "\n",
     "\n",
     "# Function to append results to JSON file\n",
@@ -462,7 +460,9 @@
     "\n",
     "# Load Wholesale Customers Data Set\n",
     "url = \"https://archive.ics.uci.edu/ml/machine-learning-databases/00292/Wholesale%20customers%20data.csv\"\n",
-    "data = pd.read_csv(url, delimiter=\",\")\n",
+    "data = pd.read_csv(url)\n",
+    "# Preprocessing\n",
+    "data.dropna(inplace=True)\n",
     "X = data.iloc[:, 2:].values  # Using columns 2 to end for clustering\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
@@ -558,6 +558,23 @@
     "\n",
     "# Print results using tabulate\n",
     "print(tabulate(table, headers, tablefmt=\"grid\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "440 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(points)  , len(points[0]))"
    ]
   }
  ],
